[workspace]
members = ["./crates/tunnel", ".", "tiny-desk", "crates/abi"]
resolver = "2"

[workspace.dependencies]
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1.80"
url = "2.5"
tokio = "1.4"
socket2 = "0.5.7"
tracing = "0.1"
network-interface = "2.0.0"
windows-sys = "0.59"
rand = "0.8"
pin-project-lite = "0.2"
zerocopy = "0.8.10"
tokio-util = "0.7"
bitflags = "2.6"
