[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
tokio = { workspace = true, features = ["full"] }
socket2 = { workspace = true }
tracing = { workspace = true }
network-interface = { workspace = true }
rand = { workspace = true }
pin-project-lite = { workspace = true }
zerocopy = { workspace = true, features = ["derive", "simd"] }
tokio-util = { workspace = true, features = ["io"] }
bitflags = { workspace = true }
async-ringbuf = { workspace = true }
crossbeam = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
parking_lot = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_System_IO",
] }
